# diskSpotcheck

./: CMakeLists.txt  File.h  Makefile  README.md  diskSpotcheck.cpp  fileTest  filesystemTest.cpp  fst.cpp  resultPlot.py  runTest  runTestSetFiles
blockDeviceTests/: diskSpotcheck.cpp  diskSystemTest.cpp  diskSystemTest_tests.h
filesystemTests/: fst.cpp  runTest  runTestSetFiles
